; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/fst/extr_fst_group.c_fst_group_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/fst/extr_fst_group.c_fst_group_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fst_group = type { i32, i32, i32 }

@MSG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"%s: Cannot alloc group\00", align 1
@fst_global_groups_list = common dso_local global i32 0, align 4
@MSG_DEBUG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"instance created\00", align 1
@on_group_created = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.fst_group* @fst_group_create(i8* %0) #0 {
  %2 = alloca %struct.fst_group*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.fst_group*, align 8
  store i8* %0, i8** %3, align 8
  %5 = call %struct.fst_group* @os_zalloc(i32 12)
  store %struct.fst_group* %5, %struct.fst_group** %4, align 8
  %6 = load %struct.fst_group*, %struct.fst_group** %4, align 8
  %7 = icmp eq %struct.fst_group* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i32, i32* @MSG_ERROR, align 4
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @fst_printf(i32 %9, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %10)
  store %struct.fst_group* null, %struct.fst_group** %2, align 8
  br label %31

12:                                               ; preds = %1
  %13 = load %struct.fst_group*, %struct.fst_group** %4, align 8
  %14 = getelementptr inbounds %struct.fst_group, %struct.fst_group* %13, i32 0, i32 2
  %15 = call i32 @dl_list_init(i32* %14)
  %16 = load %struct.fst_group*, %struct.fst_group** %4, align 8
  %17 = getelementptr inbounds %struct.fst_group, %struct.fst_group* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %3, align 8
  %20 = call i32 @os_strlcpy(i32 %18, i8* %19, i32 4)
  %21 = load %struct.fst_group*, %struct.fst_group** %4, align 8
  %22 = getelementptr inbounds %struct.fst_group, %struct.fst_group* %21, i32 0, i32 0
  %23 = call i32 @dl_list_add_tail(i32* @fst_global_groups_list, i32* %22)
  %24 = load %struct.fst_group*, %struct.fst_group** %4, align 8
  %25 = load i32, i32* @MSG_DEBUG, align 4
  %26 = call i32 @fst_printf_group(%struct.fst_group* %24, i32 %25, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %27 = load i32, i32* @on_group_created, align 4
  %28 = load %struct.fst_group*, %struct.fst_group** %4, align 8
  %29 = call i32 @foreach_fst_ctrl_call(i32 %27, %struct.fst_group* %28)
  %30 = load %struct.fst_group*, %struct.fst_group** %4, align 8
  store %struct.fst_group* %30, %struct.fst_group** %2, align 8
  br label %31

31:                                               ; preds = %12, %8
  %32 = load %struct.fst_group*, %struct.fst_group** %2, align 8
  ret %struct.fst_group* %32
}

declare dso_local %struct.fst_group* @os_zalloc(i32) #1

declare dso_local i32 @fst_printf(i32, i8*, i8*) #1

declare dso_local i32 @dl_list_init(i32*) #1

declare dso_local i32 @os_strlcpy(i32, i8*, i32) #1

declare dso_local i32 @dl_list_add_tail(i32*, i32*) #1

declare dso_local i32 @fst_printf_group(%struct.fst_group*, i32, i8*) #1

declare dso_local i32 @foreach_fst_ctrl_call(i32, %struct.fst_group*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
